First CSS styling

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,3 +1,35 @@
 /*--------------------------------------------------------------
 # Embedded Fonts
 --------------------------------------------------------------*/
+
+@font-face {
+    font-family: 'Exo-Italic-Bold';
+    src: url('/qod/wp-content/themes/qod/assets/fonts/Exo-MediumItalic.woff2') format('woff2'),
+        url('/qod/wp-content/themes/qod/assets/fonts/Exo-MediumItalic.woff') format('woff');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Exo-Bold';
+    src: url('/qod/wp-content/themes/qod/assets/fonts/Exo-Medium.woff2') format('woff2'),
+        url('/qod/wp-content/themes/qod/assets/fonts/Exo-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Exo-Italic';
+    src: url('/qod/wp-content/themes/qod/assets/fonts/Exo-LightItalic.woff2') format('woff2'),
+        url('/qod/wp-content/themes/qod/assets/fonts/Exo-LightItalic.woff') format('woff');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Exo';
+    src: url('/qod/wp-content/themes/qod/assets/fonts/Exo-Light.woff2') format('woff2'),
+        url('/qod/wp-content/themes/qod/assets/fonts/Exo-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
