--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,3 +58,277 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "content";
 @import "media";
 @import "page-templates";
+
+
+body {
+	background: #222;
+	color: #fff;
+    font-family: 'Exo';
+    font-size: 1rem;
+	line-height: 1.5;
+	
+	a {
+		text-decoration: none;
+		color: #0c0;
+	}
+
+	a:visited {
+		color: #0c0;
+	}
+
+	a:hover {
+		color: #009e00;
+	}
+
+	li {
+		list-style-type: none;
+	}
+}
+
+.logo {
+	display: flex;
+	justify-content: center;
+}
+
+button:focus {
+	outline: 0;
+}
+
+.container {
+	margin: 0 auto;
+    max-width: 1080px;
+    padding: 2.5%;
+    width: 100%;
+}
+
+#new-quote-button {
+	background-color: #222;
+    border: 2px solid #0c0;
+    border-radius: 3px;
+    color: #0c0;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1;
+	padding: .75rem 2.25rem;
+	box-shadow: none;
+	text-shadow: none;
+	font-family: 'Exo';
+	cursor: pointer;
+
+	&:hover {
+		color: #009e00;
+		border: 2px solid #009e00;
+	}
+}
+
+.logo img {
+	display: block;
+    width: 300px;
+    height: auto;
+	width: 100%;
+	padding-top: 2rem;
+}
+
+.site-info {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 4.5rem 0 3rem;
+}
+
+.entry-title {
+	margin-top: 3rem;
+}
+
+.clearfix {
+	clear: both;
+    content: "";
+    display: table;
+}
+
+
+.footer-navigation {
+
+	ul {
+		display: inline-flex;
+		list-style: none;
+		margin: 1rem 0 0;
+		padding: 0;
+	}
+
+	li {
+		border-right: 1px solid #fff;
+		line-height: 1;
+		padding: 0 1rem;
+		margin-right: 0;
+		font-size: 1rem;
+	}
+	li:last-child {
+		border-right: 0;
+	}
+
+	li:first-child {
+		padding-left: 0;
+	}
+}
+
+.page-id-113 {
+
+	ul {
+		padding-left: 0;
+		margin-left: 0;
+	}
+}
+@media (min-width: 620px) {
+	
+		.logo {
+
+			display: flex;
+			justify-content: flex-start;
+
+			img {
+				width: 500px;
+			}
+		}
+
+		li {
+			font-size: 1.25rem;
+			float: left;
+			margin-bottom: .5rem;
+    		margin-right: 1.125rem;
+		}
+
+		p {
+			font-size: 1.75rem;
+		}
+
+		#new-quote-button {
+			font-size: 1.25rem;
+		}
+
+		.site-info {
+
+			p{
+				font-size: 1rem;
+				position: relative;
+				bottom: 4px;
+			}
+		}
+	}
+
+	.page-id-111 {
+
+		input, textarea {
+			background-color: #222;
+			border: 2px solid #0c0;
+			border-radius: 3px;
+			color: #0c0;
+			padding-right: 4rem;
+			padding-bottom: 0.5rem;
+			font-size: 1rem;
+			font-weight: 700;
+			line-height: 1;
+			font-family: 'Exo';
+			cursor: pointer;
+			margin-right: 1rem;
+			margin-bottom: 1rem;
+			margin-top: 1rem;
+			display: flex;
+		
+			&:hover {
+				color: #009e00;
+				border: 2px solid #009e00;
+			}
+		}
+
+		.label {
+			margin-bottom: 1rem;
+		}
+
+		textarea {
+			padding: .75rem 2.25rem;
+			padding-bottom: 1rem;
+		}
+
+		input[type="submit"] {
+			padding: .75rem 2.25rem;
+			box-shadow: none;
+			text-shadow: none;
+			margin-top: 1.5rem;
+		}
+	}
+
+@media (min-width: 1080px) {
+
+	.logo {
+		display: flex;
+		justify-content: center;
+
+		img {
+			margin: 0 auto;
+			width: 700px;
+		}
+	}
+
+	.site-content {
+		margin: 4.5rem 175px 1.5rem;
+		position: relative;
+	}
+
+	.site-content:before {
+		color: #0c0;
+		font-size: 125px;
+		line-height: 125px;
+		position: absolute;
+		top: 0;
+		font-family: 'FontAwesome';
+		content: "\f10d";
+		left: -175px;
+	}
+
+	.site-content:after {
+		color: #0c0;
+		font-size: 125px;
+		line-height: 125px;
+		position: absolute;
+		top: 0;
+		font-family: 'FontAwesome';
+		content: "\f10e";
+		right: -175px;
+	}
+
+	.site-info {
+		display: flex;
+		justify-content: flex-end;
+
+		p {
+			font-size: 1rem;
+		}
+	}
+	
+	p {
+		font-size: 2.5rem;
+	}
+
+	.page-id-107 {
+		font-size: 1rem;
+	}
+
+	.page-id-111 {
+
+		input, textarea {
+			padding-right: 14rem;
+		}
+	}
+
+	.page-id-113 {
+		
+		.tag-archives {
+			
+			a {
+				font-size: 1rem;
+			}
+		}
+	}
+	
+
+}
