submit and show me btn

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -66,6 +66,13 @@ body {
     font-family: 'Exo';
     font-size: 1rem;
 	line-height: 1.5;
+
+	.source {
+
+		a {
+			font-style: italic;
+		}
+	}
 	
 	a {
 		text-decoration: none;
@@ -82,6 +89,21 @@ body {
 
 	li {
 		list-style-type: none;
+	}
+}
+
+.archive {
+
+	h1 {
+		border-bottom: 1px dotted #fff;
+		margin-top: 3rem;
+		padding-bottom: 1.5rem;
+	}
+
+	article {
+		border-bottom: 1px dotted #fff;
+		margin-top: 3rem;
+		padding-bottom: 1.5rem;
 	}
 }
 
@@ -137,13 +159,49 @@ button:focus {
 
 .entry-title {
 	margin-top: 3rem;
+	margin-bottom: 3rem;
 }
 
 .clearfix {
 	clear: both;
     content: "";
-    display: table;
+	display: table;
+	border: none;
+	padding: 0;
+	margin: 0;
 }
+
+input[type="search"] {
+	background-color: #222;
+	border: 2px solid #0c0;
+	font-size: 1rem;
+	margin-bottom: 1.5rem;
+	padding: .25rem 4rem .25rem .75rem;
+	font-family: 'Exo';
+}
+
+.search-submit {
+	background-color: #222;
+    color: #0c0;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+    line-height: 1;
+	box-shadow: none;
+	text-shadow: none;
+	font-size: inherit;
+	border: 0;
+    padding-left: .75rem;
+    padding-right: .75rem;
+}
+
+.post-archives li, .category-archives li, .tag-archives li {
+	float: left;
+	font-size: 1rem;
+	margin-bottom: .5rem;
+	margin-right: 1.125rem;
+}
+
 
 
 .footer-navigation {
@@ -179,6 +237,24 @@ button:focus {
 	}
 }
 @media (min-width: 620px) {
+
+	.page-id-113 {
+
+		.tag-archives {
+
+			a {
+				font-size: 1.25rem !important;
+			}
+		}
+
+		li {
+			font-size: 1.25rem;
+		}
+	}
+
+	p {
+		font-size: 1rem;
+	}
 	
 		.logo {
 
@@ -197,9 +273,20 @@ button:focus {
     		margin-right: 1.125rem;
 		}
 
+	.home {
+
 		p {
 			font-size: 1.75rem;
 		}
+
+		.site-info {
+			
+			p {
+				font-size: 1rem;
+			}
+		}
+		
+	}
 
 		#new-quote-button {
 			font-size: 1.25rem;
@@ -208,9 +295,25 @@ button:focus {
 		.site-info {
 
 			p{
-				font-size: 1rem;
 				position: relative;
 				bottom: 4px;
+			}
+		}
+
+		.archive {
+
+			.source {
+
+				a {
+					font-size: 1.25rem;
+				}
+			}
+
+			.entry-content {
+
+				p{
+					font-size: 1.75rem;
+				}
 			}
 		}
 	}
@@ -240,6 +343,11 @@ button:focus {
 			}
 		}
 
+		.site-info {
+			display: flex;
+			justify-content: flex-end;
+		}
+
 		.label {
 			margin-bottom: 1rem;
 		}
@@ -255,6 +363,7 @@ button:focus {
 			text-shadow: none;
 			margin-top: 1.5rem;
 		}
+
 	}
 
 @media (min-width: 1080px) {
@@ -274,9 +383,9 @@ button:focus {
 		position: relative;
 	}
 
-	.site-content:before {
+	.site-content::before {
 		color: #0c0;
-		font-size: 125px;
+		font-size: 7.8125rem;
 		line-height: 125px;
 		position: absolute;
 		top: 0;
@@ -285,48 +394,35 @@ button:focus {
 		left: -175px;
 	}
 
-	.site-content:after {
+	.site-content::after {
 		color: #0c0;
-		font-size: 125px;
-		line-height: 125px;
+		font-size: 7.8125rem;
+		line-height: 7.8125rem;
 		position: absolute;
 		top: 0;
 		font-family: 'FontAwesome';
 		content: "\f10e";
 		right: -175px;
 	}
-
-	.site-info {
-		display: flex;
-		justify-content: flex-end;
+	
+	.home {
 
 		p {
-			font-size: 1rem;
+			font-size: 2.5rem;
+		}
+	
+		.site-info {
+			p {
+				font-size: 1rem;
+			}
 		}
 	}
-	
-	p {
-		font-size: 2.5rem;
-	}
 
-	.page-id-107 {
-		font-size: 1rem;
-	}
 
 	.page-id-111 {
 
 		input, textarea {
 			padding-right: 14rem;
-		}
-	}
-
-	.page-id-113 {
-		
-		.tag-archives {
-			
-			a {
-				font-size: 1rem;
-			}
 		}
 	}
 	
