--- a/style.css
+++ b/style.css
@@ -768,7 +768,8 @@ input[type="search"] {
 
 input[type="search"]:focus {
   color: #fff;
-  border: 2px solid #fff; }
+  border: 2px solid #fff;
+  outline: 0; }
 
     
 .page-id-113 ul {
@@ -846,7 +847,8 @@ input[type="search"]:focus {
   -webkit-box-shadow: none;
           box-shadow: none;
   text-shadow: none;
-  margin-top: 1.5rem; }
+  margin-top: 1.5rem;
+  outline: 0; }
 
 @media (min-width: 1080px) {
   .logo {
